@@ -1,3 +1,12 @@
+2001-11-12  Jason Lerch       <jason@bic.mni.mcgill.ca>
+
+	* added ParseArgv.{c,h}
+	* volume_object_evaluate.c: added ParseArgv includes, added
+	options letting the user specify whether they want to use linear,
+	nearest_neighbour, or cubic interpolation in the evaluation.
+	* Makefile.am: added volume_object_evaluate_SOURCES with
+	ParseArgv.c
+	
 2001-11-07  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* make_gradient_volume.c (main): Correct parameter ordering
